--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@tuanbloom/ts-config",
   "version": "1.0.1",
-  "main": "tsconfig.json"
+  "main": "tsconfig.json",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  }
 }
